<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mision y Vision</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">INSTITUTO DE EDUCACION SUPERIOR TECNOLOGICO CANCHIS</string>
    <string name="titulomision">MISION</string>
    <string name="titulovision">VISION</string>
    <string name="contmision">SOMOS UNA INSTITUCIÓN DE EDUCACIÓN SUPERIOR TECNOLÓGICA QUE IMPULSA EL DESARROLLO LOCAL, REGIONAL Y NACIONAL APORTANDO SERVICIOS EDUCATIVOS DE CALIDAD EN LA FORMACIÓN DE PROFESIONALES TÉCNICOS COMPETITIVOS, INNOVADORES Y CON VALORES ÉTICOSPARA RESPONDER A LAS EXPECTATIVAS Y NECESIDADES DEL MERCADO LABORAL.</string>
    <string name="contvision">EL INSTITUTO DE EDUCACIÓN SUPERIOR TECNOLÓGICO PRIVADO "CANCHIS" AL 2021 ES UNA INSTITUCIÓN ACREDITADA LÍDER A NIVEL REGIONAL EN LA FORMACIÓN DE PROFESIONALES TÉCNICOS COMPETENTES.</string>

</resources>
